fix bug with not correct gap in leader winners table in interactive end

--- a/assets/css/interactive_end/winners_table_leader.scss
+++ b/assets/css/interactive_end/winners_table_leader.scss
@@ -23,10 +23,11 @@ height: calc((487 / 832) * 100dvh);
 
 .winners_list {
   font-family: "Lato", sans-serif;
-  display: grid;
   width: calc((1097 / 1280) * 100dvw);
 
-  gap: calc((10 / 832) * 100dvh);
+ display: flex;
+  flex-direction: column;
+  gap: calc((10 / 832) * 100dvh); /* теперь расстояние будет стабильным */
   font-weight: 500;
   height:calc((318 / 832) * 100dvh);
   font-style: Medium;
